# remote-controlled-robot-arm

./: .gitignore  AGENTS.md  CALIBRATION_FRAMEWORK.md  CLAUDE.md  COMMUNICATION_FRAMEWORK.md  GLOBAL_RULES.md  HELP.md  KONZEPTION.md  LICENSE.md  MEMORY.md  PROJEKT_ABLAUFPLAN.md  PROJEKT_FORTSCHRITT.md  README.md  ROADMAP.md  SAFETY_FRAMEWORK.md  SECURITY_FRAMEWORK.md  SYSTEM_FRAMEWORKS.md
.claude/: settings.json
calibration/: README.md  ROADMAP.md
dashboard/: README.md
docs/: ASSEMBLY_LOG_2026-04-24.md  BENCH_TEST_I2C_CHAIN_2026-04-02.md  FIRST_POWER_ON_CHECKLIST.md  README.md  ROADMAP.md  WIRING_LOG_2026-04-02.md
documentation/: INDEX.md  README.md
firmware/: README.md  ROADMAP.md  SERVO_UART_DESIGNENTSCHEIDUNGEN.md
future/: FUTURE_WORK.md
hardware/: README.md  ROADMAP.md
ros2/: .gitignore  (+10 more)
ros2/src/robotarm_description/: package.xml  setup.cfg  setup.py
ros2/src/robotarm_description/config/: display.rviz  display_wall.rviz
ros2/src/robotarm_description/launch/: debug_wall.launch.py  display.launch.py  display_wall.launch.py  replay_wall.launch.py  view.launch.py  view_wall.launch.py
ros2/src/robotarm_description/meshes/: base_link.stl  forearm.stl  gripper_left.stl  gripper_right.stl  shoulder_bracket.stl  turntable.stl  upper_arm.stl  wrist.stl
ros2/src/robotarm_description/robotarm_description/: debug_plot.py  debug_recorder.py  imu_replayer.py  joint_state_utils.py  live_monitor.py  mapping.py  mqtt_bridge.py
ros2/src/robotarm_description/scripts/: generate_meshes.py
ros2/src/robotarm_description/urdf/: robotarm.urdf  robotarm_wall.urdf
(+219 files in other folders)
